Fixed peopleController tests.